# cplusplustracing

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
src/: bounds_update_system.cpp  bounds_update_system.h  bvh_system.h  camera.h  common.h  hittable.h  main.cpp  ray.h  render_system.cpp  render_system.h
src/ecs/: ECS.h  component.h  entity.h  system.h  view.h
src/geometry/: bounds.h  bvh.h  geometry.h  hit_record.h  hittable.h  interval.h  ray.h
src/material/: material.h
